# nearorder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
analysis/: disorder_metrics.ipynb  perf.ipynb
nearorder/: bisect.py  bisect_fallback.py  filter.py  math.py
nearorder/math/: generate.py
test/: test_100k_input.py  test_binary_search.py  test_binary_search_with_fallback.py  test_generate.py  test_math.py  utils.py
test_data/: datetime_2020~2025.csv
