[project]
name = "nearorder"
version = "0.1.0"
description = "Utilities for working with near-ordered sequences under bounded disorder."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "setuptools>=75.3.2",
    "pytest-html>=4.1.1",
]

[tool.pytest.ini_options]
addopts = "-v --cov=nearorder --cov-branch --cov-report=html:htmlcov --cov-report=term-missing --html=report.html --self-contained-html"
